Adding current event and current user

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,4 +1,10 @@
 <div class="row">
+    <h4>Event Info</h4>
+    Current Event: 
+    Currnet User: 
+</div>
+
+<div class="row">
     <h4>Log Functions</h4>
 </div>
     <a href="{{ path('new_entry') }}" class="btn btn-primary btn-block" role="button">
