--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -2,7 +2,7 @@
     <h4>Event Info</h4>
     Current Event: 
     <br>
-    Currnet User: 
+    Currnet User: {{ app.user.username }}
     {% if is_granted("ROLE") %}
         {{ app.user.username }}
     {% endif %}
