Trial for thisEvent variable

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <h4>Event Info</h4>
-    Current Event: 
+    Current Event: {{ thisEvent }}
     <br>
     Currnet User: {{ app.user.username }}
 </div>
