Change to twig extension

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,6 +1,7 @@
 <div class="row">
     <h4>Event Info</h4>
-    Current Event: {{ thisEvent }}
+    Current Event: {{ getEventGlobals.thisEvent }}
+    <br>{{ EventGlobals.thisEvent }}
     <br>
     Currnet User: {{ app.user.username }}
 </div>
