Further alterations to twig extension

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <h4>Event Info</h4>
-    Current Event: {{ getEventGlobals.thisEvent }}
+    Current Event: {{ eventName }}
     <br>{{ getEventName }}
     <br>
     Currnet User: {{ app.user.username }}
