Testing the twig extension

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,7 +1,7 @@
 <div class="row">
     <h4>Event Info</h4>
     Current Event: {{ eventName }}
-    <br>{{ getEventName }}
+    <br>{{ eventTest }}
     <br>
     Currnet User: {{ app.user.username }}
 </div>
