changes to twig extension

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,9 +1,9 @@
 <div class="row">
     <h4>Event Info</h4>
-    Current Event: {{ eventName }}
-    <br>{{ eventTest }}
+    Current Event: {{ app.eventName }}
+    <br>{{ eventName }}
     <br>
-    Currnet User: {{ app.user.username }}
+    Current User: {{ app.user.username }}
 </div>
 
 <div class="row">
