Alterations to twig templates for extension call

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <h4>Event Info</h4>
-    Current Event: {{ app.eventName }}
+    Current Event: {{ app.twig_extension.eventName }}
     <br>{{ eventName }}
     <br>
     Current User: {{ app.user.username }}
