Twig extension testing

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,6 +1,7 @@
 <div class="row">
     <h4>Event Info</h4>
-    Current Event: {{ app.twig_extension.eventName }}
+    Current Event: {{ app.AppExtension.eventName }}
+    {{ AppExtension.eventName }}
     <br>{{ eventName }}
     <br>
     Current User: {{ app.user.username }}
