twig extensions testing

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,8 +1,6 @@
 <div class="row">
     <h4>Event Info</h4>
-    Current Event: {{ app.AppExtension.activeEventName }}
-    {{ AppExtension.activeEventName }}
-    <br>{{ activeEventName }}
+    Current Event: {{ activeEventName }}
     <br>
     Current User: {{ app.user.username }}
 </div>
