Fixed broken layotus

--- a/app/Resources/views/register.html.twig
+++ b/app/Resources/views/register.html.twig
@@ -1,5 +1,5 @@
 {# app/Resources/views/register.html.twig #}
-{% extends 'SummerBallBathSU.html.twig' %}
+{% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
     <h2>Control Room User Registration Form</h2>
 {% endblock %}
