Added event system settings

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -75,6 +75,11 @@
             Register List
         </div>
     </a>
+        <a href="{{ path('full_event_list') }}" class="btn btn-default btn-block" role="button">
+        <div class="row">
+            Event System
+        </div>
+    </a>
     <div class="row">
         <br>
     </div>
