--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -75,7 +75,7 @@
             Register List
         </div>
     </a>
-        <a href="{{ path('full_event_list') }}" class="btn btn-default btn-block" role="button">
+        <a href="{{ path('event_list') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             Event System
         </div>
