--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -15,6 +15,8 @@
             <p>
                 Something is broken. Please let us know what you were doing when this error occurred. We will fix it as soon as possible. Sorry for any inconvenience caused.
             </p>
+            {{ status_code }}<br>
+            {{ status_text }}
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
