--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -1,7 +1,7 @@
 {# app/Resources/TwigBundle/views/Exception/error500.html.twig #}
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-<h2>An Error has occurred</h2>
+<h2>Ooops!</h2>
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
@@ -11,12 +11,15 @@
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 {# ... #}
             {% endif %}
-
+            <h1> An Error has occured! </h1>
+            <br>
+            <h2>{{ status_code }}</h2>
+            {{ status_text }}
+            <br>
             <p>
                 Something is broken. Please let us know what you were doing when this error occurred. We will fix it as soon as possible. Sorry for any inconvenience caused.
             </p>
-            {{ status_code }}<br>
-            {{ status_text }}
+            
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
