Added edit and delete symbols to event list

--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -37,9 +37,14 @@
                                             <td>{{ event.client }}</td>
                                             <td>{{ event.event_log_start_date|date('Y-m-d H:i', "Europe/London") }}</td>
                                             <td>{{ event.event_log_stop_date|date('Y-m-d H:i', "Europe/London") }}</td>
-                                            <td>{{ event.event_active }} <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> </td>
-                                            <td><a href="{{ path('edit_event', {'id': event.id}) }}">Edit</a></td>
-                                            <td><a href="{{ path('delete_event', {'id': event.id}) }}">Delete</a></td>
+                                            <td>{% if event.event_active %}
+                                                    <span class="glyphicon glyphicon-ok" aria-hidden="true" aria-label="Active"></span> 
+                                                {% else %}
+                                                    <a href="{{ path('activate_event', {'id': event.id}) }}">Activate</a>
+                                                {% endif %}
+                                            </td>
+                                            <td><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"><a href="{{ path('edit_event', {'id': event.id}) }}">Edit</a></span></td>
+                                            <td><span class="glyphicon glyphicon-remove" aria-hidden="true" aria-label="Delete"><a href="{{ path('delete_event', {'id': event.id}) }}">Delete</a></span></td>
                                         </tr>
                                     {% endfor %}                           
                                 </tbody>
