--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -43,8 +43,8 @@
                                                     <a href="{{ path('activate_event', {'id': event.id}) }}">Activate</a>
                                                 {% endif %}
                                             </td>
-                                            <td><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"><a href="{{ path('edit_event', {'id': event.id}) }}">Edit</a></span></td>
-                                            <td><span class="glyphicon glyphicon-remove" aria-hidden="true" aria-label="Delete"><a href="{{ path('delete_event', {'id': event.id}) }}">Delete</a></span></td>
+                                            <td><a href="{{ path('edit_event', {'id': event.id}) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"></span></a></td>
+                                            <td><a href="{{ path('delete_event', {'id': event.id}) }}"><span class="glyphicon glyphicon-remove" aria-hidden="true" aria-label="Delete"></span></a></td>
                                         </tr>
                                     {% endfor %}                           
                                 </tbody>
