Added Add button and activate route in event controller

--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -49,7 +49,8 @@
                                     {% endfor %}                           
                                 </tbody>
                             </table>
-                        {% endif %}  
+                        {% endif %}
+                        <a href="{{ path('add_event') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true" aria-label="Add"></span></a>
                     </div>
                 </div>
             </div>
