fix of event list template

--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -50,7 +50,7 @@
                                 </tbody>
                             </table>
                         {% endif %}
-                        <a href="{{ path('add_event') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true" aria-label="Add"></span></a>
+                        <a href="{{ path('filter_event_list', {'filter': 'new'}) }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true" aria-label="Add"></span></a>
                     </div>
                 </div>
             </div>
