--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -30,8 +30,15 @@
 {% endblock %}
 
 {% block headertop %}
-    <div class="wrapper">
-        <h1> Event Control</h1>
+    <div class="col-md-4">
+        <div class="wrapper">
+            <h1> Event Control</h1>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <div id="HeaderClock">
+            Clock
+        </div>
     </div>
 {% endblock %}
 
@@ -66,7 +73,7 @@
             var currentTimeString = currentHours + ":" + currentMinutes + ":" + currentSeconds + " " + timeOfDay;
 
 
-            $("#clock").html(currentTimeString);
+            $("#HeaderClock").html(currentTimeString);
 
         }
         $(document).ready(function()
