Changes to clock template

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -30,7 +30,7 @@
 {% endblock %}
 
 {% block headertop %}
-    <div class="wrapper">
+    <div class="col-md-4">
             <h1> Event Control</h1>
     
             <div id="HeaderClock">
