Clock template layout change

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -30,9 +30,10 @@
 {% endblock %}
 
 {% block headertop %}
-    <div class="col-md-4">
+    <div class="container-fluid">
+        <div class="col-md-4">
             <h1> Event Control</h1>
-    
+        </div>
             <div id="HeaderClock">
                 Clock
             </div>
