Clock header adjustment

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -34,9 +34,13 @@
         <div class="col-md-4">
             <h1> Event Control</h1>
         </div>
-            <div id="HeaderClock">
-                Clock
-            </div>
+        <div class="col-md-8">
+            <h1>
+                <div id="HeaderClock">
+                    Clock
+                </div>
+            </h1>
+        </div>
     </div>
 {% endblock %}
 
