--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -9,7 +9,7 @@
     </head>
 <body class="{% block theme %}default{% endblock %}">
     {% block headertop %}{% endblock %}
-    {% block headerbottom %}{% endblock %}
+    <div class="container-fluid"> {% block headerbottom %}{% endblock %} </div>
     {% block layout %}{% endblock %}
     {% block scripts %}{% endblock %}
 </body>
