--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -36,11 +36,13 @@
         </div>
         <div class="col-md-8">
             {% if app.user %}
-                <h1>
-                    <div id="HeaderClock">
-                         
-                    </div>
-                </h1>
+                <div class="jumbotron">
+                    <h1>
+                        <div id="HeaderClock">
+
+                        </div>
+                    </h1>
+                </div>
             {% endif %}
         </div>
     </div>
