--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -30,23 +30,25 @@
 {% endblock %}
 
 {% block headertop %}
+    Event Control
+{% endblock %}
+
+{% block hiddenheadertop %}
     <div class="container-fluid">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <h1> Event Control</h1>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-6">
             {% if app.user %}
-                <div class="jumbotron">
-                    <h1>
-                        <div id="HeaderClock">
-
-                        </div>
-                    </h1>
-                </div>
+                <h1>
+                    <div id="HeaderClock">
+                    </div>
+                </h1>
             {% endif %}
         </div>
     </div>
 {% endblock %}
+
 
 {% block javascripts %}
     <script type="text/javascript" src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
