--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -8,11 +8,13 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
 <body class="{% block theme %}default{% endblock %}">
-    {% block headertop %}{% endblock %}
-    <div class="container-fluid">
-        <div class="col-md-12">
-            {% block headerbottom %}{% endblock %}
-        </div>
+    <div class="page-header">
+        <h1>
+            {% block headertop %}{% endblock %}
+            <small>
+                {% block headerbottom %}{% endblock %}
+            </small>
+        </h1>
     </div>
     {% block layout %}{% endblock %}
     {% block scripts %}{% endblock %}
