--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-<h2>Control Room Log</h2>
+Control Room Log
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
