--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-<h2>Events Settings</h2>
+Events Settings
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
