--- a/app/Resources/views/fireRegister.html.twig
+++ b/app/Resources/views/fireRegister.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-<h2>Event Control Fire Register</h2>
+Event Control Fire Register
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
