--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -2,7 +2,7 @@
 {# ... you will probably extends your base template, like base.html.twig #}
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-    <h2>Control Room Login</h2>
+Control Room Login
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
