--- a/app/Resources/views/signin.html.twig
+++ b/app/Resources/views/signin.html.twig
@@ -1,7 +1,7 @@
 {# app/Resources/views/signin.html.twig #}
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-    <h2>Control Room Sign-in Register</h2>
+Control Room Sign-in Register
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
