--- a/app/Resources/views/welcome.html.twig
+++ b/app/Resources/views/welcome.html.twig
@@ -1,8 +1,6 @@
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-    <div class="container">
-        <h2>Welcome!</h2>
-    </div>
+Welcome!
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
