Alteration to base template header

--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -9,18 +9,20 @@
     </head>
 <body class="{% block theme %}default{% endblock %}">
     <div class="page-header">
-            <h1>
+        <h1>
+            <div class="col-md-4">
                 {% block headertop %}{% endblock %}
                 <small>
                     {% block headerbottom %}{% endblock %}
                 </small>
-            </h1>
+            </div>
             {% if app.user %}
-                
+                <div class="col-md-8">
                     <div id="HeaderClock">
                     </div>
-                
+                </div>
             {% endif %}
+        </h1>
     </div>
     {% block layout %}{% endblock %}
     {% block scripts %}{% endblock %}
