Changed clock to H1

--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -16,8 +16,10 @@
                 </small>
         </h1>    
             {% if app.user %}
-                    <div class="pull-right" id="HeaderClock">
+                <h1 class="pull-right"> 
+                    <div id="HeaderClock">
                     </div>
+                </h1>
             {% endif %}
         <div class="clearfix"></div>
     </div>
