Adjusted script to load clock on page load

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -92,6 +92,7 @@
         }
         $(document).ready(function()
         {
+            updateClock();
             setInterval('updateClock()', 1000);
         });
     </script>
