Adding whitespace to sidebar buttons

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -8,14 +8,14 @@
 <div class="row">
     <h4>Log Functions</h4>
 </div>
-    <a href="{{ path('new_entry') }}" class="btn btn-primary btn-block" role="button">
+    <a href="{{ path('new_entry') }}" class="btn btn-primary btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <strong>Log Entry</strong>
             </div>
         </div>
     </a>
-    <a href="{{ path('full_log') }}" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('full_log') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Full Log View
@@ -43,7 +43,7 @@
             </div>
         </div>
     </a>
-    <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "lost"}) }}" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "lost"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Latest Lost Property
@@ -56,7 +56,7 @@
     <div class="row">
             <h4>Operator Functions</h4>
     </div>
-    <a href="{{ path('user_registration') }}" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('user_registration') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             New Operator
         </div>
@@ -65,12 +65,12 @@
         <div class="row">
             Logout
         </div>
-    <a href="{{ path('signin') }}" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('signin') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             Register Sign-in
         </div>
     </a>
-    <a href="{{ path('fire_register') }}" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('fire_register') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             Register List
         </div>
@@ -86,7 +86,7 @@
     <div class="row">
             <h4>Files & Information</h4>
     </div>
-    <a href="{{ path('media', {'filename': "ECCoP", 'type': "pdf"}) }}"  target="_blank" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('media', {'filename': "ECCoP", 'type': "pdf"}) }}"  target="_blank" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             Code of Practice
         </div>
