Added further whitespaces to sidebar buttons

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -22,21 +22,21 @@
             </div>
         </div>
     </a>
-    <a href="{{ path('sort_filter_log', {'sort': "desc", 'filter': "open"}) }}" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('sort_filter_log', {'sort': "desc", 'filter': "open"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Latest Open
             </div>
         </div>
     </a>
-    <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "medical"}) }}" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "medical"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Latest Medical
             </div>
         </div>
     </a>
-    <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "security"}) }}" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "security"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Latest Security
@@ -61,7 +61,7 @@
             New Operator
         </div>
     </a>
-    <a href="{{ path('logout') }}" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('logout') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             Logout
         </div>
@@ -75,7 +75,7 @@
             Register List
         </div>
     </a>
-        <a href="{{ path('event_list') }}" class="btn btn-default btn-block" role="button">
+        <a href="{{ path('event_list') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             Event System
         </div>
