--- a/app/Resources/views/register.html.twig
+++ b/app/Resources/views/register.html.twig
@@ -1,7 +1,7 @@
 {# app/Resources/views/register.html.twig #}
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-    <h2>Control Room User Registration Form</h2>
+Control Room User Registration Form
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
