Changed text is closed tooltip

--- a/app/Resources/views/log.html.twig
+++ b/app/Resources/views/log.html.twig
@@ -46,7 +46,7 @@ Control Room Log
                                             <td>{{ log.reported_by }}</td>
                                             <td>
                                             {% if log.general_entry_closed_time is not null %}
-                                                <div data-toggle="tooltip" data-placement="left" title="{{ log.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                <div data-toggle="tooltip" data-placement="left" title="Closed: {{ log.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
                                             {% endif %}
                                                 {% if log.general_description is null %}
                                                     <br>
@@ -61,7 +61,7 @@ Control Room Log
                                             </td>
                                             <td {% if log.medical_entry_closed_time is null %} class="severity{{ log.medical_severity }}" {% endif %}>
                                             {% if log.medical_entry_closed_time is not null %}
-                                                <div data-toggle="tooltip" data-placement="left" title="{{ log.medical_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                <div data-toggle="tooltip" data-placement="left" title="Closed: {{ log.medical_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
                                             {% endif %}
                                                 {% if log.medical_injury_description is null %}
                                                     <br>
@@ -76,7 +76,7 @@ Control Room Log
                                             </td>
                                             <td {% if log.security_entry_closed_time is null %} class="severity{{ log.severity }}" {% endif %}>
                                             {% if log.security_entry_closed_time is not null %}
-                                                <div data-toggle="tooltip" data-placement="left" title="{{ log.security_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                <div data-toggle="tooltip" data-placement="left" title="Closed: {{ log.security_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
                                             {% endif %}
                                                 {% if log.security_description is null %}
                                                     <br>
@@ -94,7 +94,7 @@ Control Room Log
                                                     <br>
                                                 {% else %}
                                                     {% if log.lost_property_entry_closed_time is not null %}
-                                                        <div data-toggle="tooltip" data-placement="left" title="{{ log.lost_property_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                        <div data-toggle="tooltip" data-placement="left" title="Closed: {{ log.lost_property_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
                                                     {% endif %}
                                                     {{ log.lost_property_description[:12]|striptags ~ ' ...' }}
                                                     <br>
