--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -31,6 +31,7 @@
     padding-bottom: 9px;
     margin: 5px 0 20px;
     border-bottom: 1px solid #eee;
+    position: fixed;
 }
 </style>
 {% endblock %}
