Fixed header experiment

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -31,9 +31,11 @@
     padding-bottom: 9px;
     margin: 5px 0 20px;
     border-bottom: 1px solid #eee;
-    position: fixed;
     top: 0px;
-    height: 79px;
+}
+
+.page-header-fixed {
+    position: fixed;
 }
 </style>
 {% endblock %}
