--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -8,6 +8,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
 <body class="{% block theme %}default{% endblock %}">
+    <div class="page-header-fixed">
     <div class="page-header">
         <h1 class="pull-left">
                 {% block headertop %}{% endblock %}
@@ -23,6 +24,7 @@
             {% endif %}
         <div class="clearfix"></div>
     </div>
+</div>
     {% block layout %}{% endblock %}
     {% block scripts %}{% endblock %}
 </body>
