--- a/app/Resources/views/3-9.html.twig
+++ b/app/Resources/views/3-9.html.twig
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-    <div class="col-sm-2 col-md-2 sidebar" style="padding-top: 10px;">
+    <div class="col-sm-2 col-md-2 sidebar">
         {% block sidebar %}{% endblock %}
     </div>
-    <div class="col-sm-10 col-md-10 content" style="padding-top: 10px;">
+    <div class="col-sm-10 col-md-10 content">
         {% block content %}{% endblock %}
     </div>
 </div>
