Added user update button to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -61,10 +61,16 @@
             New Operator
         </div>
     </a>
+    <a href="{{ path('user_update') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+        <div class="row">
+            Update User Details
+        </div>
+    </a>
     <a href="{{ path('logout') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             Logout
         </div>
+    </a>
     <a href="{{ path('signin') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             Register Sign-in
