--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -18,7 +18,7 @@
     <a href="{{ path('full_log') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                Full Log View <span class="badge">4</span>
+                Full Log View <span class="badge">{{ activeTotalLogs() }}</span>
             </div>
         </div>
     </a>
