Created medical logs badge

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -32,7 +32,7 @@
     <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "medical"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                Latest Medical
+                Latest Medical <span class="badge">{{ activeMedicalLogs() }}</span>
             </div>
         </div>
     </a>
