Added security and los property badges

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -39,14 +39,14 @@
     <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "security"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                Latest Security
+                Latest Security <span class="badge">{{ activeSecurityLogs() }}</span>
             </div>
         </div>
     </a>
     <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "lost"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                Latest Lost Property
+                Latest Lost Property <span class="badge">{{ activeLostPropertyLogs() }}</span>
             </div>
         </div>
     </a>
