Modificaiton to page-header style

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -29,8 +29,17 @@
 /* Modification to bootstrap css */
 .page-header {
     padding-bottom: 9px;
-    margin: 5px 0 20px;
+    margin: 5px 5px 20px 5px;
     border-bottom: 1px solid #eee;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    border-width: 0 0 1px;
+    z-index: 1030;
+    padding-right: 0;
+    padding-left: 0;
+    max-height: 200px;
 }
 
 </style>
