Modification to main content sytel

--- a/app/Resources/views/3-9.html.twig
+++ b/app/Resources/views/3-9.html.twig
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" style="padding-top:90px;">
     <div class="col-sm-2 col-md-2 sidebar">
         {% block sidebar %}{% endblock %}
     </div>
