Modification to clearfix

--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -21,7 +21,7 @@
                     </div>
                 </h1>
             {% endif %}
-        <div class="clearfix"></div>
+        <div class="clearfix" style="background-color: #FFFFFF;"></div>
     </div>
     {% block layout %}{% endblock %}
     {% block scripts %}{% endblock %}
