JS to resize header spacing

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -105,5 +105,11 @@
             updateClock();
             setInterval('updateClock()', 1000);
         });
+        
+        function resizeHeader() {
+            $(".page-header-push").height($(".page-header").height());
+        }
+        $(document).ready(resizeHeader);
+        $(window).resize(resizeHeader);
     </script>
 {% endblock %}
