--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -28,8 +28,8 @@
 }
 /* Modification to bootstrap css */
 .page-header {
-    padding-bottom: 9px;
-    margin: 5px 5px 20px 5px;
+    padding-bottom: 0px;
+    margin: 0px 0px 0px 0px;
     border-bottom: 1px solid #eee;
     position: fixed;
     right: 0;
@@ -37,9 +37,9 @@
     top: 0;
     border-width: 0 0 1px;
     z-index: 1030;
-    padding-right: 0;
-    padding-left: 0;
-    max-height: 200px;
+    padding-right: 5px;
+    padding-left: 5px;
+    max-height: 220px;
 }
 
 </style>
