Adjusted header re-size script

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -107,7 +107,7 @@
         });
         
         function resizeHeader() {
-            $(".page-header-push").height($(".page-header").height());
+            $(".page-header-push").height($(".page-header").height()+5);
         }
         $(document).ready(resizeHeader);
         $(window).resize(resizeHeader);
