--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -40,11 +40,11 @@ Events Settings
                                             <td>{% if event.event_active %}
                                                     <span class="glyphicon glyphicon-ok" aria-hidden="true" aria-label="Active"></span> 
                                                 {% else %}
-                                                    <a href="{{ path('activate_event', {'id': event.id}) }}">Activate</a>
+                                                    <a href="{{ path('activate_event', {'activateId': event.id}) }}">Activate</a>
                                                 {% endif %}
                                             </td>
-                                            <td><a href="{{ path('edit_event', {'id': event.id}) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"></span></a></td>
-                                            <td><a href="{{ path('delete_event', {'id': event.id}) }}"><span class="glyphicon glyphicon-remove" aria-hidden="true" aria-label="Delete"></span></a></td>
+                                            <td><a href="{{ path('edit_event', {'editId': event.id}) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"></span></a></td>
+                                            <td><a href="{{ path('delete_event', {'deleteId': event.id}) }}"><span class="glyphicon glyphicon-remove" aria-hidden="true" aria-label="Delete"></span></a></td>
                                         </tr>
                                     {% endfor %}                           
                                 </tbody>
