Added shortcut key for new entry

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -104,6 +104,11 @@
         {
             updateClock();
             setInterval('updateClock()', 1000);
+            
+            Mousetrap.bind('ctrl+n', function(e) {
+                e.preventDefault();
+                window.location.href = "{{ path('new_entry') }}";
+            });
         });
         
         function resizeHeader() {
