Changed shortcut key to ctrl-e

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -116,7 +116,7 @@
         
         $(document).ready(function()
         {
-            Mousetrap.bind('ctrl+l', function(e) {
+            Mousetrap.bind('ctrl+e', function(e) {
                    e.preventDefault();
                    window.location.href = "{{ path('new_entry') }}";
             });
