--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -39,6 +39,7 @@
     z-index: 1030;
     padding-right: 20px;
     padding-left: 15px;
+    background-color: #FFFFFF;
     max-height: 220px;
 }
 
